--- a/tinyheart.html
+++ b/tinyheart.html
@@ -15,7 +15,7 @@
             width:800px;
             height:600px;
         }
-        #canfasBack{
+        #canvasBack{
             z-index:0;
         }
         #canvasFront{
@@ -29,6 +29,8 @@
                 <canvas id="canvasFront" width="800px" height="600px"></canvas>
             </div>
         </div>
+    </body>
+        
         <script type="text/javascript" src="js/commonFunctions.js"></script>
         <script type="text/javascript" src="js/background.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
@@ -36,6 +38,10 @@
         <script type="text/javascript" src="js/fruit.js"></script>
         <script type="text/javascript" src="js/mom.js"></script>
         <script type="text/javascript" src="js/baby.js"></script>
-    </body>
-    </body>
+        <script type="text/javascript" src="js/scoreboard.js"></script>
+        <script type="text/javascript" src="js/data.js"></script>
+        <script type="text/javascript" src="js/circle.js"></script>
+        <script type="text/javascript" src="js/dust.js"></script>
+        <script type="text/javascript" src="js/heart.js"></script>
+        <script type="text/javascript" src="js/collision.js"></script>
 </html>
